--- a/A13_XML_Parser1/app/src/main/AndroidManifest.xml
+++ b/A13_XML_Parser1/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.devsul.a13_xml_parser1">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
