--- a/A40_Location/app/src/main/AndroidManifest.xml
+++ b/A40_Location/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.devsul.a40_location">
+    <!-- 위치 정보 사용 권한 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
